# docs/api/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/users/{address}/points/history": {
+        "/v1/users/{address}/points/history": {
             "get": {
                 "description": "Get points history by address",
                 "consumes": [
@@ -44,7 +44,7 @@
                 "responses": {}
             }
         },
-        "/api/v1/users/{address}/tasks/status": {
+        "/v1/users/{address}/tasks/status": {
             "get": {
                 "description": "Get tasks status by address",
                 "consumes": [
